deploy/environments/dev/kubernetes-istio/patch-gateways.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: inference-gateway
  labels:
    istio.io/enable-inference-extproc: "true"
  annotations:
    networking.istio.io/service-type: ClusterIP
spec:
  gatewayClassName: istio
